// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarNavigation ACT theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-5kykh0-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-k0qlsl-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-18o469-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1mph6fj-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-13r9aol-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1mph6fj-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1nt2zhd-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-1dhmv41-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-kz9nu-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-18o469-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-7stfk3-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-aq4s5q-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-7stfk3-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-tyzc5j-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURA theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-1c7m8j8-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-po5v0s-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-18o469-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-ylgs2e-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1erv096-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-ylgs2e-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-3qeath-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-1xmk38r-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-zju2yc-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-18o469-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-13v0zlq-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-tn1g7d-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-13v0zlq-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1t706vm-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarNavigation ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorTransparent MuiAppBar-positionStatic css-4zcrud-MuiPaper-root-MuiAppBar-root"
    style="--Paper-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1ofa90d-MuiTypography-root-MuiLink-root"
      to="https://act-et.org"
    >
      <img
        alt="ACT"
        aria-label="ACT"
        class="css-10klw3m"
        src="https://i.imgur.com/P0gtzO0.png"
      />
    </a>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-18o469-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1mj4ywo-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1fh3ihw-MuiTypography-root"
          >
            Home
          </p>
        </a>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1mj4ywo-MuiTypography-root-MuiLink-root"
          to="#"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1f2heqg-MuiTypography-root"
          >
            Other Page
          </p>
        </a>
      </div>
    </div>
  </header>
</div>
`;
